<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D6DEDE"
    android:paddingTop="16dp">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="335dp"
        android:layout_height="49dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/atras"
            android:layout_width="83dp"
            android:layout_height="29dp"
            android:contentDescription="atras"
            app:srcCompat="@drawable/left" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="368dp"
        android:layout_height="64dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.627"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.089">

        <LinearLayout
            android:layout_width="349dp"
            android:layout_height="66dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txtdeletproducto"
                android:layout_width="373dp"
                android:layout_height="66dp"
                android:gravity="center"
                android:text="@string/np"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="367dp"
        android:layout_height="542dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.677">

        <LinearLayout
            android:layout_width="371dp"
            android:layout_height="516dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_width="339dp"
                android:layout_height="89dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/labelcodigo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="2dp"
                    android:text="@string/cp"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/addCode"
                    android:layout_width="281dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/radius"
                    android:ems="10"
                    android:hint="@string/cp"
                    android:inputType="textPersonName"
                    android:paddingLeft="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="335dp"
                android:layout_height="76dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/labelnameprdo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/namep"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/addName"
                    android:layout_width="281dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/radius"
                    android:ems="10"
                    android:hint="@string/namep"
                    android:inputType="textPersonName"
                    android:paddingLeft="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="341dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ca"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/addAmount"
                    android:layout_width="281dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/radius"
                    android:ems="10"
                    android:hint="@string/ca"
                    android:inputType="textPersonName"
                    android:paddingLeft="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="341dp"
                android:layout_height="78dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="2dp"
                    android:text="@string/ct"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/addValue"
                    android:layout_width="281dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/radius"
                    android:ems="10"
                    android:hint="@string/ct"
                    android:inputType="textPersonName"
                    android:paddingLeft="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="337dp"
                android:layout_height="75dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="3dp"
                    android:text="@string/p"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/addPrice"
                    android:layout_width="281dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/radius"
                    android:ems="10"
                    android:hint="@string/p"
                    android:inputType="textPersonName"
                    android:paddingLeft="20dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button4"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/redondbtn"
                        android:text="Editar"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/btndelete"
                        android:layout_width="135dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/redondbtn"
                        android:text="@string/gd"
                        android:textColor="@color/white" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>