<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D6DEDE">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="335dp"
        android:layout_height="49dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:contentDescription="atras"
            android:id="@+id/atras"
            android:layout_width="77dp"
            android:layout_height="48dp"
            app:srcCompat="@drawable/left" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="243dp"
        android:layout_height="84dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.205">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/r_c"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="344dp"
        android:layout_height="474dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.149">

        <LinearLayout
            android:layout_width="292dp"
            android:layout_height="299dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/txtid"
                android:layout_width="259dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/radius"
                android:ems="10"
                android:gravity="center"
                android:hint="Documento"
                android:inputType="numberSigned|number" />

            <EditText
                android:id="@+id/txtemail"
                android:layout_width="270dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/radius"
                android:ems="10"
                android:gravity="center"
                android:hint="Correo Electronico"
                android:inputType="textWebEmailAddress" />

            <EditText
                android:id="@+id/txtpass"
                android:layout_width="270dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/radius"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPassword"
                android:hint="@string/cs"
                android:paddingLeft="30dp"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtpass1"
                android:layout_width="270dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/radius"
                android:ems="10"
                android:gravity="center"
                android:hint="Repetir Contraseña"
                android:inputType="textPassword"
                android:paddingLeft="30dp"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="318dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button2"
                android:layout_width="142dp"
                android:layout_height="48dp"
                android:layout_margin="10dp"
                android:layout_weight="0"
                android:background="@drawable/redondbtn"
                android:text="@string/cl"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="141dp"
                android:layout_height="48dp"
                android:layout_margin="10dp"
                android:background="@drawable/redondbtn"
                android:text="@string/en"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>